--- a/index.html
+++ b/index.html
@@ -219,6 +219,6 @@
                 </li>
             </ul>
         </section>
-        <script src="./src/main.js"></script>
+        <script src="./dist/js/main.js"></script>
     </body>
 </html>
